--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c rollup.config.ts --configPlugin typescript",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "publishPatch": "npm version patch && npm publish",
+    "publishMinor": "npm version minor && npm publish",
+    "publishMajor": "npm version major && npm publish"
   },
   "repository": {
     "type": "git",
@@ -28,11 +31,14 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
     "rollup": "^4.46.4",
+    "rollup-plugin-delete": "^3.0.1",
+    "rollup-plugin-dts": "^6.2.3",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2"
   }
