--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES5",
     "module": "ESNext",
-    "declaration": true,
+    // "declaration": true,
+    // "declarationDir": "dist",
     "outDir": "dist",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "bundler"
   },
-  "include": ["src/**/*", "rollup.config.ts"], // 包含 Rollup 配置文件
+  "include": ["src/**/*", "rollup.config.ts"],
   "exclude": ["node_modules"]
 }
